[-] FO : fixed bug #8555 - 1.4.0.17 h1 overlaps a background bar

--- a/themes/prestashop/css/global.css
+++ b/themes/prestashop/css/global.css
@@ -290,7 +290,8 @@ body.mceContentBody {
 .rte h1,
  .mceContentBody h1 {
 	font-size: 25px;
-	font-weight: bold
+	font-weight: bold;
+	background:inherit;
 }
 .rte h2,
  .mceContentBody h2 {
